# Tarot-Bot

./: main.py  pyproject.toml
