[tool.poetry]
name = "repl_python3_Twitch-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twitchio = "^2.1.3"
keyboard = "^0.13.5"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
